--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ edition = "2018"
 strum = { version = "0.24.0", features = ["derive"] }
 strum_macros = "0.24.0"
 once_cell = "1.9.0"
+serde = { version = "1.0.137", features = ["derive"] }
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["winuser"] }
